# agent-first-psql

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  spore.core.json
.github/workflows/: ci.yml  release.yml
docs/: cli.md  design.md  overview.md  reference.md
scripts/: release-smoke.sh  test-hooks.sh
skills/: agent-first-psql.md
skills/agent-first-psql/: SKILL.md
src/: cli.rs  cli_runner.rs  config.rs  conn.rs  container_transport.rs  db.rs  emit.rs  handler.rs  lib.rs  limits.rs  logutil.rs  main.rs  mcp.rs  output_fmt.rs  pipe.rs  protocol.rs  psql_admin.rs  readonly_main.rs  readonly_policy.rs  secret_config.rs  skill_admin.rs  ssh_transport.rs  types.rs  writer.rs
src/db/: errors.rs  executor.rs  mod.rs  params.rs  pool.rs  rows.rs  session.rs
tests/: .env.example  cli_integration.rs  config_secret_sources.rs  container_e2e.rs  coverage_integration.rs  psql_compatibility.rs  readonly_binary.rs  runtime_integration.rs
tests/support/: env.rs  unit_cli.rs  unit_config.rs  unit_conn.rs  unit_db.rs  unit_handler.rs  unit_main.rs  unit_mcp.rs  unit_types.rs
