[package]
name = "agent-first-psql"
version = "0.6.0"
edition = "2021"
description = "A PostgreSQL interface for AI agents: reliable, structured, explicit, and safe by default."
license = "MIT"
repository = "https://github.com/agentfirstkit/agent-first-psql"
readme = "README.md"
exclude = [".github/"]

[[bin]]
name = "afpsql"
path = "src/main.rs"

[dependencies]
agent-first-data = { version = "0.9", features = ["cli-help", "cli-help-markdown"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures-util = "0.3"
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio = { version = "1", features = ["full"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
