[package]
name = "agent-first-psql"
version = "0.7.0"
edition = "2024"
default-run = "afpsql"
description = "A PostgreSQL interface for AI agents: reliable, structured, explicit, and read-only by default."
license = "MIT"
repository = "https://github.com/agentfirstkit/agent-first-psql"
readme = "README.md"
exclude = [".github/"]

[features]
# Enables integration tests that require a live PostgreSQL DSN.
db-tests = []

[[bin]]
# Keep afpsql first: release tooling derives the primary artifact name from it.
name = "afpsql"
path = "src/main.rs"

[[bin]]
name = "afpsql-readonly"
path = "src/readonly_main.rs"

[dependencies]
agent-first-data = { version = "0.19.1", features = ["cli-help", "cli-help-markdown", "skill-admin", "stream-redirect"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures-util = "0.3"
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio = { version = "1", features = ["full"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
